fixed resizing of buttons in header and layout jump on shop page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -187,77 +187,7 @@ ol{
 }
 
 
-.add_to_cart_button,.single_add_to_cart_button,.options-button,button,.button,#chimpy_popup_submit{
-	background: $blue-color;
-	margin: 0;
-	padding: 0;
-	border-width: 0;
-	border-color: transparent;
-	background: transparent;
-	font-weight: 400;
-	cursor: pointer;
-	position: relative;
-	font-size: 15px;
-	font-family: inherit;
-	padding: 8px 24px;
-	overflow: hidden;
-	background: $blue-color !important;
-	color: #fff;
-	border-radius: 2px;
-	-webkit-transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
-	transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
-	&:before{
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		border-radius: 2px;
-		background: currentColor;
-		content: '';
-		z-index: -1;
-		opacity: 0;
-		-webkit-transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
-		transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
-		-webkit-transform: scale(0.2);
-		transform: scale(0.2);
-		&:hover{
-			opacity: 0.15;
-		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		-webkit-transform: scale(1);
-		transform: scale(1);
-		}
-		&:focus{
-			opacity: 0.15;
-		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		-webkit-transform: scale(1);
-		transform: scale(1);
-		}
-	}      
-	&:hover{
-		box-shadow: 0 1px 8px rgba(58,51,53,0.4);
-		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		-webkit-transform: scale(1.1);
-		transform: scale(1.1);
-		&:before{
-			opacity: 0.15;
-			-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-			transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-			-webkit-transform: scale(1);
-			transform: scale(1);
-		}
-	}
-	&:focus{
-		box-shadow: 0 1px 8px rgba(58,51,53,0.4);
-		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
-		-webkit-transform: scale(1.1);
-		transform: scale(1.1);
-	}
-}
+
 #chimpy_popup_submit{
 	margin-top: 8px;
 	padding-top: 2px;
@@ -2543,9 +2473,11 @@ dt .right{
 .flexslider{
 	border: 0 !important;
 	margin: -80px 0 0 0 !important;
+	min-height: 350px;
 	@media all and (max-width: 1023px){	
 		margin-left: -20px !important;
 		margin-right: -20px !important;
+		min-height: 200px;
 	}
 	.text{
 		position: absolute;
@@ -3163,6 +3095,79 @@ nav{
 		height: 100%;
 	}
 }
+
+li.add_to_cart_button a, button.add_to_cart_button,a.add_to_cart_button,.single_add_to_cart_button,.options-button,button,.button,#chimpy_popup_submit{
+	background: $blue-color;
+	margin: 0;
+	min-height: 12px; 
+	border-width: 0;
+	border-color: transparent;
+	background: transparent;
+	font-weight: 400;
+	cursor: pointer;
+	position: relative;
+	font-size: 15px;
+	font-family: inherit;
+	padding: 8px 24px !important;
+	overflow: hidden;
+	background: $blue-color !important;
+	color: #fff !important;
+	border-radius: 2px;
+	-webkit-transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
+	transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
+	&:before{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		border-radius: 2px;
+		background: currentColor;
+		content: '';
+		z-index: -1;
+		opacity: 0;
+		-webkit-transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
+		transition: all 0.2s cubic-bezier(0.02, 0.01, 0.47, 1);
+		-webkit-transform: scale(0.2);
+		transform: scale(0.2);
+		&:hover{
+			opacity: 0.15;
+		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		}
+		&:focus{
+			opacity: 0.15;
+		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		}
+	}      
+	&:hover{
+		box-shadow: 0 1px 8px rgba(58,51,53,0.4);
+		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+		&:before{
+			opacity: 0.15;
+			-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+			transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+			-webkit-transform: scale(1);
+			transform: scale(1);
+		}
+	}
+	&:focus{
+		box-shadow: 0 1px 8px rgba(58,51,53,0.4);
+		-webkit-transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		transition: all 0.3s cubic-bezier(0.02, 0.01, 0.47, 1);
+		-webkit-transform: scale(1.1);
+		transform: scale(1.1);
+	}
+}
+
 /**** PREVIOUS INLINE STYLES *****/
 
 
